# sdcpy

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  CREDITS.md  LICENSE  Makefile  Pipfile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/workflows/: build_and_publish.yml  run_tests.yml
benchmarks/: benchmark_compute_sdc.py  compare_implementations.py
docs/: Makefile  authors.md  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: basic_usage.py
sdcpy/: __init__.py  core.py  io.py  plotting.py  scale_dependent_correlation.py
tests/: conftest.py  test_core.py  test_io.py  test_plotting.py  test_ranges_df.py  test_sdc_analysis.py  test_sdcpy.py
