[tool.poetry]
name = "sdcpy"
version = "0.3.1"
description = "Scale Dependent Correlation in Python"
authors = ["Alejandro Fontal <alejandrofontal92@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sdcpy"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
pandas = "^2.0.2"
plotnine = "^0.12.1"
seaborn = "^0.12.2"
scipy = "^1.10.1"
tqdm = "^4.65.0"
alabaster = "^0.7.13"

[tool.poetry.group.dev.dependencies]
alabaster = "^0.7.13"
bumpversion = "^0.6.0"
wheel = "^0.40.0"
watchdog = "^3.0.0"
tox = "^4.6.0"
coverage = "^7.2.7"
pytest = "^7.3.1"
pytest-runner = "^6.0.0"
twine = "^4.0.2"
Sphinx = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
