[tool.poetry]
name = "sdcpy"
version = "0.3.1"
description = "Scale Dependent Correlation in Python"
authors = ["Alejandro Fontal <alejandrofontal92@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sdcpy"}]
exclude = [
  "**/*.rst",
  "**/__pycache__/**",
  "**/*.py[cod]",
  "docs/_build/**",
  "**/.DS_Store"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
pandas = "^2.0.2"
plotnine = "^0.12.1"
seaborn = "^0.12.2"
scipy = "^1.10.1"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
bump-my-version = "^0.28.0"
watchdog = "^3.0.0"
tox = "^4.6.0"
coverage = "^7.2.7"
pytest = "^7.3.1"
ruff = "^0.8.0"
pre-commit = "^4.0.0"

[tool.poetry.group.docs.dependencies]
Sphinx = "^7.0.1"
alabaster = "^0.7.13"
myst-parser = "^2.0.0"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B028",   # stacklevel in warnings (intentional suppression in internal code)
]

[tool.ruff.lint.isort]
known-first-party = ["sdcpy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
