[project]
name = "sdcpy"
version = "0.3.1"
description = "Scale Dependent Correlation in Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9,<3.13"
authors = [
    {name = "Alejandro Fontal", email = "alejandrofontal92@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "matplotlib>=3.7.1",
    "numpy>=1.24.3",
    "pandas>=2.0.2",
    "plotnine>=0.12.1",
    "seaborn>=0.12.2",
    "scipy>=1.10.1",
    "tqdm>=4.65.0",
]

[project.urls]
Homepage = "https://github.com/AlFontal/sdcpy"
Documentation = "https://sdcpy.readthedocs.io"
Repository = "https://github.com/AlFontal/sdcpy"

[dependency-groups]
dev = [
    "bump-my-version>=0.28.0",
    "watchdog>=3.0.0",
    "tox>=4.6.0",
    "coverage>=7.2.7",
    "pytest>=7.3.1",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
]
docs = [
    "Sphinx>=7.0.1",
    "alabaster>=0.7.13",
    "myst-parser>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "**/*.rst",
    "**/__pycache__/**",
    "**/*.py[cod]",
    "docs/_build/**",
    "**/.DS_Store",
]

[tool.hatch.build.targets.wheel]
packages = ["sdcpy"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B028",   # stacklevel in warnings (intentional suppression in internal code)
]

[tool.ruff.lint.isort]
known-first-party = ["sdcpy"]
